Fixed bug #34978 (php out of memory or segmentation fault while installing sugarcrm 3.5.1a)